--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
+
+        .from-blue-600 {
+            --tw-gradient-from: #25bdeb var(--tw-gradient-from-position) !important;
+            --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to) !important;
+        }
     </style>
 </head>
 <body>
