--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                                     <div className="grid lg:grid-cols-2 gap-4 sm:gap-6">
                                         <div>
                                             <div className="flex justify-between items-center mb-4">
-                                                <h2 className="text-lg sm:text-xl font-bold text-gray-800">Customer List</h2>
+                                                <h2 className="text-lg sm:text-xl font-bold text-gray-800">Customers</h2>
                                                 <button onClick={() => setShowAddCustomer(!showAddCustomer)} className="bg-blue-600 text-white px-3 sm:px-4 py-2 rounded-lg hover:bg-blue-700 flex items-center gap-2 text-sm">
                                                     <Icon name="Plus" className="w-4 h-4 sm:w-5 sm:h-5" /> <span className="hidden sm:inline">Add</span>
                                                 </button>
@@ -844,7 +844,7 @@
 
                                         <div className="bg-white border border-gray-200 rounded-xl p-4 sm:p-6 overflow-x-auto">
                                             <div className="flex justify-between items-center mb-4 flex-col sm:flex-row gap-3">
-                                                <h3 className="text-lg sm:text-xl font-bold text-gray-800">Customer Balances</h3>
+                                                <h3 className="text-lg sm:text-xl font-bold text-gray-800">Customer Summary</h3>
                                                 <div className="flex gap-2 w-full sm:w-auto">
                                                      
                                                     <input type="text" placeholder="Search..." value={summarySearchQuery} onChange={(e) => setSummarySearchQuery(e.target.value)} className="flex-1 sm:flex-none p-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
