--- a/index.html
+++ b/index.html
@@ -859,6 +859,11 @@
                                                                     Customer {summarySortConfig.key === 'name' && <Icon name={summarySortConfig.direction === 'asc' ? 'ChevronUp' : 'ChevronDown'} className="w-4 h-4" />}
                                                                 </button>
                                                             </th>
+                                                            <th className="text-right py-3 px-2 sm:px-4 font-semibold text-gray-700 text-xs sm:text-sm">
+                                                                <button onClick={() => handleSummarySort('balance')} className="hover:text-blue-600 cursor-pointer flex items-center gap-1 ml-auto">
+                                                                    Balance {summarySortConfig.key === 'balance' && <Icon name={summarySortConfig.direction === 'asc' ? 'ChevronUp' : 'ChevronDown'} className="w-4 h-4" />}
+                                                                </button>
+                                                            </th>
                                                             <th className="text-left py-3 px-2 sm:px-4 font-semibold text-gray-700 text-xs sm:text-sm">
                                                                 <button onClick={() => handleSummarySort('mobile')} className="hover:text-blue-600 cursor-pointer flex items-center gap-1">
                                                                     Mobile {summarySortConfig.key === 'mobile' && <Icon name={summarySortConfig.direction === 'asc' ? 'ChevronUp' : 'ChevronDown'} className="w-4 h-4" />}
@@ -869,22 +874,17 @@
                                                                     Trans. {summarySortConfig.key === 'transactions' && <Icon name={summarySortConfig.direction === 'asc' ? 'ChevronUp' : 'ChevronDown'} className="w-4 h-4" />}
                                                                 </button>
                                                             </th>
-                                                            <th className="text-right py-3 px-2 sm:px-4 font-semibold text-gray-700 text-xs sm:text-sm">
-                                                                <button onClick={() => handleSummarySort('balance')} className="hover:text-blue-600 cursor-pointer flex items-center gap-1 ml-auto">
-                                                                    Balance {summarySortConfig.key === 'balance' && <Icon name={summarySortConfig.direction === 'asc' ? 'ChevronUp' : 'ChevronDown'} className="w-4 h-4" />}
-                                                                </button>
-                                                            </th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
                                                         {filteredAndSortedSummary.map(customer => (
                                                             <tr key={customer.id} className="border-b border-gray-100 hover:bg-gray-50">
                                                                 <td className="py-3 px-2 sm:px-4 text-xs sm:text-sm">{maskText(customer.name)}</td>
-                                                                <td className="py-3 px-2 sm:px-4 text-gray-600 text-xs sm:text-sm">{maskText(customer.mobile)}</td>
-                                                                <td className="py-3 px-2 sm:px-4 text-gray-600 text-xs sm:text-sm">{customer.transactions ? customer.transactions.length : 0}</td>
-                                                                <td className={`py-3 px-2 sm:px-4 text-right font-bold text-xs sm:text-sm ${customer.balance >= 0 ? 'text-red-600' : 'text-green-600'}`}>
+                                                                <td className={`py-3 px-2 sm:px-4 text-right font-bold text-xs sm:text-sm ${customer.balance > 0 ? 'text-red-600' : 'text-green-600'}`}>
                                                                     {maskAmount(customer.balance)}
                                                                 </td>
+                                                                <td className="py-3 px-2 sm:px-4 text-gray-600 text-xs sm:text-sm">{maskText(customer.mobile)}</td>
+                                                                <td className="py-3 px-2 sm:px-4 text-gray-600 text-xs sm:text-sm">{customer.transactions ? customer.transactions.length : 0}</td>
                                                             </tr>
                                                         ))}
                                                     </tbody>
