--- a/index.html
+++ b/index.html
@@ -401,24 +401,18 @@
             };
 
             function getCurrentDate() {
-                
-
                 const now = new Date();
 
-                // Date
-                const day = now.getDate();
-                const month = tamilMonths[now.getMonth()];
+                const day = String(now.getDate()).padStart(2, "0");
+                const month = String(now.getMonth() + 1).padStart(2, "0"); // months start at 0
                 const year = now.getFullYear();
-                const formattedDate = `${day} ${month} ${year}`;
 
-                // 24-hour Time
-                const hours = now.getHours().toString().padStart(2, "0");
-                const minutes = now.getMinutes().toString().padStart(2, "0");
+                const hours = String(now.getHours()).padStart(2, "0");
+                const minutes = String(now.getMinutes()).padStart(2, "0");
 
-                const formattedTime = `${hours}:${minutes}`;
-
-                return `${formattedDate} ${formattedTime}`;
+                return `${day}-${month}-${year} ${hours}:${minutes}`;
             }
+
 
 
 
@@ -428,8 +422,8 @@
                 // short & clean Tamil message (safe for SMS)
                 const message = 
             `வணக்கம் ${customer.name},
-        ${formattedDate} வரை MRV STORES கணக்கில் உங்கள் நிலுவை: ரூ.${customer.balance.toFixed(2)}.
-        நன்றி — MRV STORES`;
+            ${formattedDate} வரை MRV STORES கணக்கில் உங்கள் நிலுவை: ரூ.${customer.balance.toFixed(2)}.
+            நன்றி — MRV STORES`;
 
                 const encodedMessage = encodeURIComponent(message);
                 const smsUrl = `sms:${customer.mobile}?body=${encodedMessage}`;
